      wfP_multp ~> wfp_multp
      wfP_subset_mset ~> wfp_subset_mset
  - Added lemmas.
      image_mset_diff_if_inj
      minus_add_mset_if_not_in_lhs[simp]

* Theory "HOL-Library.Suc_Notation" provides compact notation for
iterated Suc terms.

* Theory "HOL-Library.Adhoc_Overloading" has been moved to Pure. Minor
INCOMPATIBILITY: need to adjust theory imports.


*** ML ***

* Term.variant_bounds replaces former Term.variant_frees for logical
manipulation of terms, without inner-syntax operations (e.g. reading a
term in the context of goal parameters). In contrast, former
Term.variant_frees made some attempts to work with constants as well,
but without taking the formal name space or abbreviations into account.
The existing operations Logic.goal_params, Logic.concl_of_goal,
Logic.prems_of_goal are now based on Term.variant_bounds, and thus
change their semantics silently! Rare INCOMPATIBILITY, better use
Variable.variant_names or Variable.focus_params, instead of
Logic.goal_params etc.

* Antiquotation \<^instantiate>\<open>(no_beta) x = t in \<dots>\<close> is like
\<^instantiate>\<open>x = t in \<dots>\<close>, but without implicit beta-normalization.
This is occasionally useful for low-level applications.

* Antiquotation \<^bundle>\<open>name\<close> inlines a formally checked bundle name.

* The new operation Pattern.rewrite_term_yoyo alternates top-down,
bottom-up, top-down etc. until a normal form is reached. This often
works better than former rewrite_term_top --- that is still available,
but has been renamed to rewrite_term_topdown to emphasize that something
notable has changed here.

* Constructors for type Pretty.T (such as Pretty.str, Pretty.mark_str,
Pretty.markup_block) are now value-oriented. Use of the global
print_mode is restricted to ultimate Pretty.string_of (and some
variants), while the underlying Pretty.output operation supports an
explicit Pretty.output_ops argument for alternative applications.
